CS202/Homework/hw01/results.txt
hw1.cpp:7:69: warning: unused parameter 'out' [-Wunused-parameter]
int getIdFromFile(std::string file, std::istream &in, std::ostream &out) {
                                                                    ^
hw1.cpp:94:28: warning: use of logical '||' with constant operand [-Wconstant-logical-operand]
        fs.open(file, std::ios::in||std::ios::binary);
                                  ^ ~~~~~~~~~~~~~~~~
hw1.cpp:94:28: note: use '|' for a bitwise operation
        fs.open(file, std::ios::in||std::ios::binary);
                                  ^~~~~
                                  |
hw1.cpp:110:9: warning: cast to 'char *' from smaller integer type 'int' [-Wint-to-pointer-cast]
                         y = (char*)i;
                             ^
3 warnings generated.
hw1test.cpp:182:4: error: unknown type name 'string'; did you mean 'std::string'?
   string expectedOut;
   ^~~~~~
   std::string
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iosfwd:194:65: note: 'std::string' declared here
typedef basic_string<char, char_traits<char>, allocator<char> > string;
                                                                ^
hw1test.cpp:273:1: error: unknown type name 'string'; did you mean 'std::string'?
string expectedOut;
^~~~~~
std::string
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iosfwd:194:65: note: 'std::string' declared here
typedef basic_string<char, char_traits<char>, allocator<char> > string;
                                                                ^
2 errors generated.
